fix: fix page width break on mobile

--- a/themes/origins/styles/product-card.scss
+++ b/themes/origins/styles/product-card.scss
@@ -80,7 +80,7 @@
     }
 
     .title {
-      width: fit-content;
+      width: min(fit-content, 100%);
       max-width: 100%;
       white-space: nowrap;
       overflow: hidden;
